some more responsive goodness preventing title name overlap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,18 @@ header{
 }
 }
 
+@mixin lateAnimation {
+  opacity: 0;
+  animation-delay: 2.2s;
+  animation-fill-mode: forwards;
+}
+
+@mixin semiLateAnimation {
+  opacity: 0;
+  animation-delay: 1.1s;
+  animation-fill-mode: forwards;
+}
+
 @mixin wrapperColumnsLandscape {
   grid-template-columns: 50vw 50vw;
 }
@@ -104,18 +116,19 @@ header{
 
 .wrapper {
   display: grid;
-  grid-template-rows: 100vh;
-
   /* Smartphones (landscape) ----------- */
   @media only screen and (min-width : 321px) {
     @include wrapperColumnsPortrait;
+    grid-template-rows: auto auto;
   }
   @media (orientation: portrait) {
     @include wrapperColumnsPortrait;
+    grid-template-rows: minmax(100vh, auto) auto;
   }
   /* iPads (landscape) ----------- */
   @media only screen and (min-device-width : 768px) and (orientation : landscape) {
     @include wrapperColumnsLandscape;
+    grid-template-rows: 100vh;
   }
 }
 
@@ -128,11 +141,11 @@ header{
 
   /* Smartphones (landscape) ----------- */
   @media only screen and (min-width : 321px) {
-    padding-top: 160px;;
+    padding-top: 20px;;
     @include mainMenuGridPropertiesPortrait;
   }
   @media (orientation: portrait) {
-    padding-top: 160px;
+    padding-top: 20px;
     @include mainMenuGridPropertiesPortrait;
   }
   /* iPads (landscape) ----------- */
@@ -206,7 +219,7 @@ h1 {
   font-weight: bold;
   margin: 10px;
   text-align: right;
-  animation: 1s ease-in 0s 1 slideInFromTop;
+  animation: 1s ease-in 0s 1 slideInFromLeft;
   /* Smartphones (landscape) ----------- */
   @media only screen and (min-width : 321px) {
     font-size: 8vw;
@@ -242,10 +255,16 @@ strong {
   text-align: left;
   justify-content: flex-end;
   padding: 5px;
+  transition: background-color 0.5s ease;
+  cursor: crosshair;
 }
 
 .square:hover {  
   background-color: $color3;
+}
+
+.square:active {
+  transform: translateY(3px);
 }
 
 .resume-square {
@@ -254,6 +273,7 @@ strong {
   grid-column: 2 / 5;  
   grid-row: 1 / 4;
   animation: 1s ease-in 0s 1 slideInFromTop;
+  @include semiLateAnimation;
 }
 
 .emoji-data-visualizer-square {
@@ -262,14 +282,25 @@ strong {
   grid-column: 5 / 8;
   grid-row: 1 / 4;
   animation: 1s ease-in 0s 1 slideInFromRight;
+  @include semiLateAnimation;
+}
+
+.emoji-data-visualizer-square:hover {
+  background-color: $color5;
 }
 
 .twitter-bot-square {
-  background-color: $color6;
+  background-color: $color7;
   color: $color3;
   grid-column: 5 / 7;
   grid-row: 4 / 6;
   animation: 1s ease-in 0s 1 slideInFromRight;
+  @include semiLateAnimation;
+}
+
+.twitter-bot-square:hover {
+  background-color: $color5;
+  @include semiLateAnimation;
 }
 
 .photo-mosaic-video-square {
@@ -278,6 +309,7 @@ strong {
   grid-column: 3 / 5; 
   grid-row: 4 / 6;
   animation: 1s ease-in 0s 1 slideInFromTop;
+  @include semiLateAnimation;
 }
 
 .tinyicon-square {
@@ -286,6 +318,11 @@ strong {
   grid-column: 1 / 3;
   grid-row: 4 / 6;
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
+}
+
+.tinyicon-square:hover {
+  background-color: $color5;
 }
 
 .three-d-scripting-square {
@@ -294,6 +331,7 @@ strong {
   grid-column: 6 / 8;
   grid-row: 8 / 10;
   animation: 1s ease-in 0s 1 slideInFromBottom;
+  @include semiLateAnimation;
 }
 
 .face-recognition-square {
@@ -302,6 +340,11 @@ strong {
   grid-column: 4 / 6;
   grid-row: 6 / 8;
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
+}
+
+.face-recognition-square:hover {
+  background-color: $color1;
 }
 
 .dhcp-lease-mgmt-square {
@@ -310,6 +353,7 @@ strong {
   grid-column: 6 / 8;
   grid-row: 6 / 8;
   animation: 1s ease-in 0s 1 slideInFromBottom;
+  @include semiLateAnimation;
 }
 
 .access-point-monitoring-square {
@@ -318,6 +362,11 @@ strong {
   grid-column: 4 / 6;
   grid-row: 8 / 10;
   animation: 1s ease-in 0s 1 slideInFromBottom;
+  @include semiLateAnimation;
+}
+
+.access-point-monitoring-square:hover {
+  background-color: $color1;
 }
 
 .professional-square {
@@ -326,61 +375,80 @@ strong {
   grid-column: 1 / 4;
   grid-row: 6 / 9;
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
 }
 
 .linkedin-square {
-  background-color: $color6;
+  background-color: $color7;
   background-image: url("../assets/img/linkedin.svg");
   animation: 1s ease-in 0s 1 slideInFromTop;
+  @include semiLateAnimation;
 }
 
 .github-square {
   background-color: $color2;
   background-image: url("../assets/img/github.svg");
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
 }
 
 .angellist-square {
   background-color: $color7;
   background-image: url("../assets/img/angellist.svg");
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
 }
 
 .twitter-square {
   background-color: $color5;
   background-image: url("../assets/img/twitter.svg");
   animation: 1s ease-in 0s 1 slideInFromRight;
+  @include semiLateAnimation;
 }
 
 .vimeo-square {
   background-color: $color5;
   background-image: url("../assets/img/vimeo.svg");
   animation: 1s ease-in 0s 1 slideInFromBottom;
+  @include semiLateAnimation;
 }
 
 .email-square {
   background-color: $color1;
   background-image: url("../assets/img/email.svg");
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
 }
 
 .upwork-square {
   background-color: $color3;
   animation: 1s ease-in 0s 1 slideInFromLeft;
+  @include semiLateAnimation;
 }
 
 .freelancer-square {
   background-color: $color7;
   animation: 1s ease-in 0s 1 slideInFromBottom;
+  @include semiLateAnimation;
 }
 
 .portfolio-menu-box {
   background-color: $color4;
   display:flex;
   flex-direction: column;
-  height: 100vh;
   align-items: center;
   justify-content: flex-beginning;
+  /* Smartphones (landscape) ----------- */
+  @media only screen and (min-width : 321px) {
+    height: auto;
+  }
+  @media (orientation: portrait) {
+    height: auto;
+  }
+  /* iPads (landscape) ----------- */
+  @media only screen and (min-device-width : 768px) and (orientation : landscape) {
+    height: 100vh;
+  }
 }
 
 .my-name {
@@ -390,7 +458,7 @@ strong {
   flex: 1;
   border-left: 5px solid $color1;
   min-height:100px;
-  animation: 1s ease-in 0s 1 slideInFromRight;
+  animation: 1s ease-in 0s 1 slideInFromTop;
 }
 
 .tiny {
@@ -414,6 +482,7 @@ strong {
     border-left: 15px solid $color1;
   }
   overflow: scroll;
+  animation: 1s ease-in 0s 1 slideInFromLeft;
 }
 
 .content p {
@@ -423,7 +492,11 @@ strong {
   margin-left: 45px;
   line-height: 2;
   color: $color1;
-    border-left: 5px solid $color1;
+  border-left: 5px solid $color1;
+}
+
+.content-header {
+  @include lateAnimation;
 }
 
 .content-title-box {
@@ -433,6 +506,8 @@ strong {
 
 .content-sub-title {
   text-align: right;
+  animation: 1s ease-in 0s 1 slideInFromTop;
+  @include lateAnimation;
 }
 
 .content-title-words {
@@ -448,6 +523,13 @@ strong {
     //),
     url("../assets/img/visualizer.png");
   border: 5px solid $color1;
+  animation: 1s ease-in 0s 1 slideInFromRight;
+  @include lateAnimation;
+}
+
+.content-write-up-box {
+  animation: 1s ease-in 0s 1 slideInFromBottom;
+  @include lateAnimation;
 }
 
 .size1 {
